[tool.poetry]
name = "bender"
version = "0.1.0"
description = "A package that makes ML processes easier, faster and less error prone"
authors = ["Mats E. Mollestad <mats@mollestad.no>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9.7"
pandas = "^1.3.4"
databases = "^0.5.3"
asyncpg = "^0.24.0"
sklearn = "^0.0"
xgboost = "^1.5.0"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
gspread = "^4.0.1"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"
seaborn = "^0.11.2"
aioaws = "^0.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]
